--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,11 +2,11 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.TaskManager" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="android:windowBackground">#000000</item>
-        <item name="colorPrimary">#222222</item>
-        <item name="colorPrimaryDark">#181818</item>
-        <item name="colorAccent">#BB86FC</item>
-        <item name="android:statusBarColor">#181818</item>
-        <item name="android:navigationBarColor">#181818</item>
+<!--        <item name="android:windowBackground">#000000</item>-->
+<!--        <item name="colorPrimary">#222222</item>-->
+<!--        <item name="colorPrimaryDark">#181818</item>-->
+<!--        <item name="colorAccent">#BB86FC</item>-->
+<!--        <item name="android:statusBarColor">#181818</item>-->
+<!--        <item name="android:navigationBarColor">#181818</item>-->
     </style>
 </resources>
