--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Task Manager"
+        android:text="New Task"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,12 +67,12 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/descInputEditText"
-            android:hint="Enter Task Description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="101dp"
             android:layout_gravity="start"
             android:height="150dp"
             android:gravity="start"
+            android:hint="Enter Task Description"
 
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -86,65 +86,92 @@
         android:text="Due Date"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/taskTitle"
+        app:layout_constraintEnd_toEndOf="@+id/dateInputEditText"
+        app:layout_constraintStart_toStartOf="@+id/dateInputEditText"
         app:layout_constraintTop_toBottomOf="@+id/descInput" />
 
     <EditText
         android:id="@+id/dateInputEditText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
         android:clickable="true"
         android:ems="10"
+        android:gravity="center"
         android:focusable="false"
         android:hint="dd/mm/yyyy"
         android:inputType="date"
         android:onClick="onDateClick"
-        app:layout_constraintStart_toStartOf="@+id/dateTitle"
-        app:layout_constraintTop_toBottomOf="@+id/dateTitle"
-
-
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateTitle" />
 
     <TextView
         android:id="@+id/timeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Due Time"
+        android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/dateTitle"
-        app:layout_constraintTop_toBottomOf="@+id/dateInputEditText" />
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="@+id/timeInputEditText"
+        app:layout_constraintStart_toStartOf="@+id/timeInputEditText"
+        app:layout_constraintTop_toBottomOf="@+id/descInput" />
 
     <EditText
         android:id="@+id/timeInputEditText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
         android:clickable="true"
         android:ems="10"
         android:focusable="false"
         android:hint="hh:mm"
+        android:gravity="center"
+        android:layout_marginRight="20dp"
         android:inputType="time"
         android:onClick="onTimeClick"
-        app:layout_constraintStart_toStartOf="@+id/timeTitle"
-        app:layout_constraintTop_toBottomOf="@+id/timeTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeTitle" />
 
-        />
+    <ImageView
+        android:id="@+id/taskImage"
+        android:layout_width="285dp"
+        android:layout_height="252dp"
+        android:layout_margin="20dp"
+        android:scaleType="centerCrop"
+        android:outlineProvider="background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeInputEditText"
+        tools:srcCompat="@tools:sample/avatars" />
+
 
     <Button
         android:id="@+id/saveBtn"
-
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Save"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeInputEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/taskImage" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:clickable="true"
+        android:onClick="onCameraClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
