--- a/app/src/main/res/layout/activity_to_do_list_layout.xml
+++ b/app/src/main/res/layout/activity_to_do_list_layout.xml
@@ -11,7 +11,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Task Manager"
+        android:text="My Tasks"
+        android:layout_margin="20dp"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
