--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,7 +6,7 @@
 <!--        <item name="colorPrimary">#222222</item>-->
 <!--        <item name="colorPrimaryDark">#181818</item>-->
 <!--        <item name="colorAccent">#BB86FC</item>-->
-<!--        <item name="android:statusBarColor">#181818</item>-->
-<!--        <item name="android:navigationBarColor">#181818</item>-->
+        <item name="android:windowTranslucentStatus">true</item>
+        <!--        <item name="android:navigationBarColor">#181818</item>-->
     </style>
 </resources>
