Refactor ToDoListActivity to use RecyclerView and implement TaskListAdapter
- Replaced LinearLayout with RecyclerView in activity_to_do_list_layout.xml.
- Created TaskListAdapter to handle task list display in RecyclerView.
- Implemented setTaskList method in TaskListAdapter to update the task list and notify the adapter of data changes.
- Added a done checkbox to the task list.
- Implemented done checkbox functionality to update the task's done status in the database when checked.
- Added `done` field in the Task class.
- Added methods `updateTask`, `deleteTask` in the TasksDAO.
- Created ItemTouchHelper class.

--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -59,7 +59,15 @@
                     android:textColor="@android:color/darker_gray"
                     android:textSize="14sp" />
             </LinearLayout>
+
         </LinearLayout>
+            <CheckBox
+                android:id="@+id/taskListDone"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="end"
+                />
     </androidx.cardview.widget.CardView>
 
 
