Add Maps functionality and user-specific task management features

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,4 +15,16 @@
         android:title="Todo"
         android:icon="@drawable/baseline_format_list_numbered_24"
         />
+
+    <item
+        android:id="@+id/page_map"
+        android:title="Map"
+        android:icon="@drawable/map_pin"
+        />
+
+    <item
+        android:id="@+id/account_settings"
+        android:title="Account"
+        android:icon="@drawable/baseline_account_circle_24"
+        />
 </menu>
