--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="New Task"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/taskTitle"
@@ -28,7 +17,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -61,19 +50,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="@+id/descTitle"
         app:layout_constraintTop_toBottomOf="@+id/descTitle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/descInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="101dp"
-            android:layout_gravity="start"
-            android:height="150dp"
-            android:gravity="start"
+            android:layout_height="100dp"
+            android:gravity="start|top"
             android:hint="Enter Task Description"
-
-            />
+            android:inputType="textMultiLine"
+            android:maxLines="5"
+            android:padding="10dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -81,13 +70,13 @@
         android:id="@+id/dateTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Due Date"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/dateInputEditText"
         app:layout_constraintStart_toStartOf="@+id/dateInputEditText"
-        app:layout_constraintTop_toBottomOf="@+id/descInput" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
     <EditText
         android:id="@+id/dateInputEditText"
@@ -96,8 +85,8 @@
         android:layout_marginLeft="20dp"
         android:clickable="true"
         android:ems="10"
-        android:gravity="center"
         android:focusable="false"
+        android:gravity="center"
         android:hint="dd/mm/yyyy"
         android:inputType="date"
         android:onClick="onDateClick"
@@ -108,57 +97,59 @@
         android:id="@+id/timeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Due Time"
-        android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="@+id/timeInputEditText"
         app:layout_constraintStart_toStartOf="@+id/timeInputEditText"
-        app:layout_constraintTop_toBottomOf="@+id/descInput" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
     <EditText
         android:id="@+id/timeInputEditText"
         android:layout_width="150dp"
         android:layout_height="40dp"
+        android:layout_marginRight="20dp"
         android:clickable="true"
         android:ems="10"
         android:focusable="false"
-        android:hint="hh:mm"
         android:gravity="center"
-        android:layout_marginRight="20dp"
+        android:hint="hh:mm"
         android:inputType="time"
         android:onClick="onTimeClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeTitle" />
 
+
     <ImageView
         android:id="@+id/taskImage"
-        android:layout_width="369dp"
-        android:layout_height="387dp"
-        android:layout_margin="20dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
         android:outlineProvider="background"
         android:scaleType="centerCrop"
+        android:padding="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeInputEditText"
         tools:srcCompat="@tools:sample/avatars" />
 
 
+
+
     <Button
         android:id="@+id/saveBtn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Save"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskImage" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/imageButton"
@@ -170,6 +161,69 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:onClick="onMapButtonClick"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descInput">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/mapBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:onClick="onMapButtonClick"
+                app:srcCompat="@drawable/map_pin"
+                app:tint="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Place"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/mapContainer"
+        android:name="jonty.example.taskmanager.MapFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:elevation="5dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:clickable="true"
+        android:elevation="10dp"
+        android:translationZ="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
+
 
 
 
